# asmr-app

./: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/: hrtf_model.onnx
src-tauri/src/: crossfade.rs  distance_adjust.rs  hrtf.rs  main.rs  phantomsilhouette.rs
src/app/: layout.tsx  page.tsx
src/components/: ASMR3DModel.tsx  AsmrGenerator.tsx  ToggleSwitch.tsx  knob.tsx
styles/: globals.css
