[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = [ "window-set-fullscreen", "dialog-open"] }
Rust-WORLD = "0.1.1"
hound = "3.5.1"
rand = "0.8.5"
anyhow = "1.0.95"
ort = { version = "1.16.3", features = ["load-dynamic"] }
ndarray = "0.15"
ndarray-stats = "0.6.0"
thiserror = "2.0.11"
rubato = "0.14"
approx = "0.5.1"
biquad = "0.5.0"
rodio = "0.20.1"
once_cell = "1.20.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
